<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="legut.zadanie2.MainActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textMass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textSize="30sp"
            android:text="@string/mass"
            android:layout_below="@+id/buttonKgM"
            android:layout_toStartOf="@+id/textBMILabel" />

        <TextView
            android:id="@+id/textHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:textSize="30sp"
            android:text="@string/height"
            android:layout_below="@+id/editMass"
            android:layout_alignStart="@+id/textMass" />

        <EditText
            android:id="@+id/editMass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberDecimal"
            android:text=""
            android:layout_marginStart="14dp"
            android:layout_alignTop="@+id/textMass"
            android:layout_toEndOf="@+id/textHeight"
            android:imeOptions="flagNoExtractUi" />

        <EditText
            android:id="@+id/editHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editMass"
            android:layout_alignTop="@+id/textHeight"
            android:ems="5"
            android:inputType="numberDecimal"
            android:layout_alignBottom="@+id/textHeight"
            android:text=""
            android:imeOptions="flagNoExtractUi" />

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:width="200dp"
            android:text="@string/calculate_bmi"
            android:layout_below="@+id/textHeight"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textBMILabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="30sp"
            android:text="@string/bmi"
            android:layout_below="@+id/buttonCalculate"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textBMICalculated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textSize="30sp"
            android:text=""
            android:layout_below="@+id/textBMILabel"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text=""
            android:layout_marginTop="10dp"
            android:layout_below="@+id/textBMICalculated"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/buttonLbIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_in"
            android:layout_marginEnd="17dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/buttonKgM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg_m"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/buttonLbIn" />

        <TextView
            android:id="@+id/textModeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/mode"
            android:layout_alignBaseline="@+id/buttonKgM"
            android:layout_alignBottom="@+id/buttonKgM"
            android:layout_alignParentStart="true"
            android:layout_marginStart="23dp" />

        <TextView
            android:id="@+id/textActiveMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/kg_m"
            android:layout_marginEnd="15dp"
            android:layout_alignBaseline="@+id/textModeLabel"
            android:layout_alignBottom="@+id/textModeLabel"
            android:layout_toEndOf="@+id/textModeLabel" />

    </RelativeLayout>

</ScrollView>